# plusoft-api

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi-test.yml  publish-to-pypi.yml
plusoft_api/: __init__.py
plusoft_api/helpers/: api_endpoint.py  base_requests.py
plusoft_api/models/: aux.py  consult.py  users.py
plusoft_api/scripts/: __init__.py  consult.py  payloads.py  plusoft_api_client.py  users.py
plusoft_api/utils/: __init__.py  aux_functions.py  aux_types.py
