[tool.poetry]
name = "plusoft-api"
version = "0.1.0"
description = ""
authors = ["Diogo56 <diogo.amorim2001@gmail.com>"]
readme = "README.md"
packages = [{include = "plusoft_api"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
