[tool.poetry]
name = "plusoft-api"
version = "0.1.3"
description = ""
authors = ["stone_people_analytics <systems-techpeople@stone.com.br>"]
readme = "README.md"
packages = [{include = "plusoft_api"}]
maintainers = [
    "Diogo56 <diogo.amorim2001@gmail.com>"
]
license = "MIT"
repository = "https://github.com/people-analytics-tech/plusoft-api"


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
typing-extensions = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
